# invyra-platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: README.md
migrations/: README.md  env.py  script.py.mako
scripts/: check_env.py  healthcheck.py  run_migrations.py
tests/: __init__.py  conftest.py  test_access_foundation.py  test_api_adapters.py  test_api_app_contract.py  test_api_contract_layer_hardening.py  test_api_contracts.py  test_api_service_dependencies.py  test_app_starts.py  test_auth_api_contracts.py  test_auth_api_service_integration.py  test_auth_foundation.py  test_auth_runtime_foundation.py  test_auth_runtime_service_skeleton.py  test_config_loads.py  test_database_session_config.py  test_devices_foundation.py  test_environments_foundation.py  test_health_endpoint.py  test_inventory_access_api_contracts.py  test_inventory_access_api_service_integration.py  test_inventory_access_gateway_foundation.py  test_inventory_access_service_skeleton.py  test_inventory_launch_api_contracts.py  test_inventory_launch_api_service_integration.py  test_inventory_launch_foundation.py  test_inventory_launch_service_skeleton.py  test_licensing_foundation.py  test_platform_base.py  test_portal_adapter_boundary_hardening.py  test_portal_adapter_contracts.py  test_portal_api_adapter_foundation.py  test_portal_api_boundary_hardening.py  test_portal_api_router_foundation.py  test_portal_boundary_hardening.py  test_portal_dependency_boundary_hardening.py  test_portal_dependency_provider_contracts.py  (+15 more)
(+84 files in other folders)
